--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ember-cli": "~2.15.1",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.3.0",
+    "ember-cli-content-security-policy": "^1.0.0",
     "ember-cli-dependency-checker": "^2.0.0",
     "ember-cli-eslint": "^4.0.0",
     "ember-cli-htmlbars": "^2.0.1",
@@ -40,12 +41,10 @@
     "ember-welcome-page": "^3.0.0",
     "loader.js": "^4.2.3"
   },
-  
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
   },
   "dependencies": {
-
     "bootstrap": "^3.3.7",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.0.0",
