--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.15.0",
     "ember-welcome-page": "^3.0.0",
-    "loader.js": "^4.2.3"
+    "glob": "^4.5.3",
+    "http-proxy": "^1.16.2",
+    "loader.js": "^4.2.3",
+    "morgan": "^1.9.0"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
