--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "broccoli-asset-rev": "^2.4.5",
+    "cryptiles": "^4.1.3",
     "ember-bootstrap": "^1.0.0-rc.3",
     "ember-cli": "~2.15.1",
     "ember-cli-app-version": "^3.0.0",
@@ -69,6 +70,9 @@
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.15.0",
     "ember-welcome-page": "^3.0.0",
-    "loader.js": "^4.2.3"
+    "hoek": "^6.1.2",
+    "loader.js": "^4.2.3",
+    "lodash": "^4.17.11",
+    "sshpk": "^1.16.0"
   }
 }
