--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^2.1.0",
+    "ember-concurrency": "^0.8.27",
     "ember-data": "~3.7.0",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.1.0",
@@ -56,9 +57,11 @@
     "node": "6.* || 8.* || >= 10.*"
   },
   "dependencies": {
+    "async": "^2.6.2",
     "broccoli-asset-rev": "^2.4.5",
     "cryptiles": "^4.1.3",
     "ember-bootstrap": "^1.0.0-rc.3",
+    "ember-browserify": "^1.2.2",
     "ember-cli": "~2.15.1",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.3.0",
@@ -80,6 +83,8 @@
     "hoek": "^6.1.2",
     "loader.js": "^4.2.3",
     "lodash": "^4.17.11",
-    "sshpk": "^1.16.1"
+    "sockjs-client": "^1.3.0",
+    "sshpk": "^1.16.1",
+    "stompjs": "^2.3.3"
   }
 }
